Fix homepage spacing with image removed.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -41,7 +41,7 @@ nav > a {
 
 #bio {
 	min-height: 20em;
-	padding: 1em 0 4em 10em;
+	padding: 1em 0 4em;
 	position: relative;
 }
 
